tests/ui/type_checker/ok/functions.aru
func add(x: int, y: int): int {
    return x + y
}

func main() {
    let result = add(1, 2)
}
