tests/ui/type_checker/invalid/call_wrong_arg_type.aru
func add(x: int, y: int): int {
    return x + y
}

func main() {
    add(1, "hello")
}
